<package format="3">
  <name>waypoint_navigator</name>
  <version>0.0.1</version>
  <description>Minimal waypoint navigator package</description>
  <maintainer email="test@example.com">Jerry</maintainer>
  <license>Apache-2.0</license>

  <!-- 关键：编译工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_pycodestyle</buildtool_depend>

  <!-- 关键：使用Python方式构建 -->
  <export>
    <build_type>ament_python</build_type>
  </export>

  <!-- 依赖：要用到 rclpy nav_msgs geometry_msgs 等 -->
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
